--- a/sein.html
+++ b/sein.html
@@ -1,56 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Self Introduction</title>
-	<link rel="stylesheet" href="stylesheet01.css">
+    <meta charset="UTF-8">
+    <title>Self Introduction</title>
+    <link rel="stylesheet" href="stylesheet01.css">
 </head>
+
 <body>
-	<header class="header">
-		<h1>Jang Geanyul</h1>
-		<nav class="nav">
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Study</a></li>
-				<li><a href="#">Facebok</a></li>
-				<li><a href="#">Likelion</a></li>
-			</ul>
-		</nav>
-	</header>
-	<section class="section">
-		<div class="div">
-			<article class="headline">
-				<p>No pain, No gain!</p>
-			</article>
-		</div>
-		<div class="div02 margin">
-			<article class="profile">
-				<img src="img/profile.jpg" alt="잠시만 기다려주세요...">
-			</article>
-			<article class= "myself">
-				<p>Name : Geanyul Jang;</p>
-				<p>Age : 23;</p>
-				<p>University : Sangji;</p>
-				<p>Major : Telecommunication epineering ;</p>
-				<p>Hobby : Sports Game;</p>
-				<p>Residence : Seoul;</p>
-			</article>
-		</div>
-	</section>
-	<section class="mentor">
-		<h2>My mentor: Steven Gerrard;</h2>
-		<article class="men1">
-			<img src="img/SG1.jpg" alt="Steven Gerrard">
-		</article>
-		<article class="men2">
-			<img src="img/SG2.jpg" alt="Steven Gerrard">
-		</article>
-		<article class="men3">
-			<img src="img/SG3.jpg" alt="Steven Gerrard">
-		</article>
-	</section>
-	<footer class="footer">
-		<p>Copyright ⓒ Geanyul Jang</p>
-	</footer>
+    <div class="background">
+        <header class="header margin">
+            <h1>Jang Geanyul</h1>
+            <nav class="gnb">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Study</a></li>
+                    <li><a href="#">Facebok</a></li>
+                    <li><a href="#">Likelion</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
+    <section class="clearfix">
+        <article class="article1">
+            <p>No pain, No gain!</p>
+        </article>
+    </section>
+    <section class="section2">
+        <div class="margin">
+            <article class="article_img">
+                <img src="img/profile.jpg" alt="잠시만 기다려주세요...">
+            </article>
+            <article class="section2_article">
+                <p>Name : Geanyul Jang;</p>
+                <p>Age : 23;</p>
+                <p>University : Sangji;</p>
+                <p>Major : Telecommunication epineering ;</p>
+                <p>Hobby : Sports Game;</p>
+                <p>Residence : Seoul;</p>
+            </article>
+        </div>
+    </section>
+    <section class="section3 margin">
+        <h2>My mentor: Steven Gerrard</h2>
+        <article>
+            <img src="img/SG1.jpg" alt="Steven Gerrard">
+        </article>
+        <article class="padding-left">
+            <img src="img/SG2.jpg" alt="Steven Gerrard">
+        </article>
+        <article class="padding-left">
+            <img src="img/SG3.jpg" alt="Steven Gerrard">
+        </article>
+    </section>
+    <footer class="footer clearfix">
+        <p>Copyright ⓒ Geanyul Jang</p>
+    </footer>
 </body>
+
 </html>
